--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Alejandro">
     <meta name="OG:title" content="Sitio Web Avanzado HTML CSS">
     <meta name="OG:description" content="Sitio Web para aprender HTML y CSS avanzado.">
-    <meta name="OG:image" content="icono.png">
+    <meta property="OG:image" content="icono.png">
     <title>Sitio Web Avanzado</title>
 </head>
 <body class="bo">
@@ -19,6 +19,7 @@
     <p class="IAH2">Por aquí estarán mis prácticas de la parte avanzada de CSS y HTML del curso de SoyDalto por YouTube<br><br>Ya he subido otro repositorio a mi GitHub con lo básico como esto de los textos, títulos, párrafos, fondos, gradientes, sombras</p>
     <div class="bloque">
         <a href="enlaces/e1.html" title="Enlace 1" class="bot1">Formulario</a>
+        <a href="enlaces/e2.html" title="Enlace 2" class="bot1">Formulario 2</a>
     </div>
 
 </body>
