--- a/enlaces/e1.html
+++ b/enlaces/e1.html
@@ -11,9 +11,33 @@
     <a href="../index.html" class="b1e1">Principal</a>
     <h2 class="Formulario">Formulario</h2>
     <form>
-        <div class="form_input"> <input type="text" placeholder="Nombre"</div>
-        <div class="form_input"> <input type="email" placeholder="Email"</div>
-        <div class="form_input"><textarea placeholder="Escribe un mensaje." maxlength="140" rows="4"></textarea></div>
+        <fieldset><legend>Datos Personales</legend>
+        <div class="form_input"> <label for="x1">Nombre de Usuario</label> <input type="text" placeholder="Nombre" id="x1"></div>
+        <div class="form_input"> <label for="x2">Correo Electrónico</label> <input type="email" placeholder="email@gmail.com" id="x2"></div>
+        <div class="form_input"><label for="x3">Mensaje</label><textarea placeholder="Escribe un mensaje..." maxlength="140" rows="4" id="x3"></textarea></div>
+        </fieldset>
+        <fieldset><legend>¿Cómo llego aquí?</legend>
+        <div class="form_input"><label>Tipo de Usuario
+            <select name="type-of-user">
+                <option value="user1">Astronauta</option>
+                <option value="user2">Ingeniero Aeroespacial</option>
+                <option value="user3">Secretario</option>
+                <option value="user4">Agente Secreto</option>
+            </select>
+        </label>
+        </div>
+        <div class="form_input"><label>Referente
+            <input list="referente" name="referente">
+            <datalist id="referente" name="type-of-user">
+                <option value="Juan">Ing. de la NASA</option>
+                <option value="Miguel">TikToker</option>
+                <option value="Luis">Locutor</option>
+                <option value="Carlos">YouTuber</option>
+            </select>
+        </label>
+        </div>
+        <div class="form_input"><label>Acepto Términos y Condiciones<input type="checkbox"></div></div></label>
+    </fieldset>
     </form>
 </body>
 </html>
