--- a/enlaces/e2.html
+++ b/enlaces/e2.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario 2</title>
+    <title>Data-Summary</title>
     <link ref="icon" href="../icono.png" type="image/png">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../stylesE2.css">
 </head>
-<body>
-    
+<body class="bde2">
+    <h2>Formulario 2</h2>
+    <form>
+        <fieldset><legend>Datos Personales</legend>
+            <div class="form_input"><input type="text" placeholder="Nombre"></div>
+            <div class="form_input"><input type="text" placeholder="Correo Electrónico"></div>
+            <div class="form_input"><input type="text" placeholder="Contraseña"></div>
+        </fieldset>
+        
+    </form>
+    <details>
+    <summary>Términos y Condiciones</summary>
+    <ul>
+        <li>a</li>
+        <li>e</li>
+        <li>i</li>
+        <li>o</li>
+    </ul>
+    </details>
 </body>
 </html>
