--- a/enlaces/e2.html
+++ b/enlaces/e2.html
@@ -20,10 +20,32 @@
     <details>
     <summary>Términos y Condiciones</summary>
     <ul>
-        <li>a</li>
-        <li>e</li>
-        <li>i</li>
-        <li>o</li>
+        <li><b>Aceptación de los Términos</b><br><br>
+            Al acceder y utilizar este sitio web, aceptas cumplir y estar sujeto a los siguientes términos y condiciones. Si no estás de acuerdo con estos términos, por favor, no utilices este sitio web.</li>
+            <br><br>
+            <li><b>Uso del Sitio Web</b><br><br>
+            Contenido: Todo el contenido de este sitio web, incluyendo texto, imágenes, gráficos y otros materiales, son propiedad de [Nombre de la Empresa/Sitio Web] y están protegidos por las leyes de propiedad intelectual.
+            Uso Permitido: Puedes utilizar este sitio web para fines personales y no comerciales, siempre que no modifiques ni distribuyas el contenido sin nuestro permiso.
+            Uso Prohibido: No puedes utilizar este sitio web para fines ilegales o perjudiciales, incluyendo la publicación de contenido ofensivo, la distribución de virus informáticos o la violación de los derechos de otros usuarios.</li>
+            <br><br>
+            <li><b>Privacidad</b><br><br>
+            Tu privacidad es importante para nosotros. Consulta nuestra Política de Privacidad para obtener información sobre cómo recopilamos, utilizamos y protegemos tus datos personales.</li>
+            <br><br>
+            <li><b>Enlaces a Terceros</b><br><br>
+                Este sitio web puede contener enlaces a sitios web de terceros. No somos responsables del contenido o las políticas de privacidad de estos sitios.<br><br></li>
+            <li><b>Limitación de Responsabilidad</b><br><br>
+                Este sitio web se proporciona "tal cual" y "según disponibilidad". No garantizamos que el sitio web esté libre de errores o que el acceso sea ininterrumpido.
+                En ningún caso seremos responsables de daños directos, indirectos, incidentales, especiales o consecuentes que resulten del uso o la imposibilidad de uso de este sitio web.<br><br></li>
+            <li><b>Cambios en los Términos y Condiciones</b><br><br>
+                Nos reservamos el derecho de modificar estos términos y condiciones en cualquier momento. Los cambios serán efectivos inmediatamente después de su publicación en este sitio web.<br><br></li>
+            <li><b>Ley Aplicable</b><br><br>
+                Estos términos y condiciones se rigen por las leyes de [País/Estado]. Cualquier disputa relacionada con estos términos se resolverá en los tribunales de [Ciudad/País].<br><br></li>
+            <li><b>Información de Contacto</b><br><br>
+                Si tienes alguna pregunta sobre estos términos y condiciones, por favor contáctanos a través de [dirección de correo electrónico o formulario de contacto].<br><br></li>
+            <li><b>Consideraciones Adicionales:</b><br><br>
+                Productos y Servicios: Si tu sitio web vende productos o servicios, incluye detalles sobre precios, pagos, envíos y devoluciones.
+                Contenido Generado por el Usuario: Si permites a los usuarios publicar comentarios o contenido, establece reglas claras sobre el contenido aceptable y tus derechos para moderar o eliminar contenido.
+                Propiedad Intelectual: Si tu sitio web incluye contenido protegido por derechos de autor, como imágenes o videos, asegúrate de tener los permisos necesarios.<br><br></li>
     </ul>
     </details>
 </body>
