--- a/enlaces/e2.html
+++ b/enlaces/e2.html
@@ -45,7 +45,7 @@
             <li><b>Consideraciones Adicionales:</b><br><br>
                 Productos y Servicios: Si tu sitio web vende productos o servicios, incluye detalles sobre precios, pagos, envíos y devoluciones.
                 Contenido Generado por el Usuario: Si permites a los usuarios publicar comentarios o contenido, establece reglas claras sobre el contenido aceptable y tus derechos para moderar o eliminar contenido.
-                Propiedad Intelectual: Si tu sitio web incluye contenido protegido por derechos de autor, como imágenes o videos, asegúrate de tener los permisos necesarios.<br><br></li>
+                Propiedad Intelectual: Si tu sitio web incluye contenido protegido por derechos de autor, como imágenes o videos, asegúrate de tener los permisos necesarios.</li>
     </ul>
     </details>
 </body>
