--- a/enlaces/terminoscondiciones.html
+++ b/enlaces/terminoscondiciones.html
@@ -3,34 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data-Summary</title>
-    <link ref="icon" href="../icono.png" type="image/png">
+    <title>Términos y Condiciones</title>
     <link rel="stylesheet" href="../stylesE2.css">
 </head>
-<body class="bde2">
-    <h2>Formulario 2</h2>
-    <form>
-        <fieldset><legend>Datos Personales</legend>
-            <div class="form_input"><input type="text" placeholder="Nombre"></div>
-            <div class="form_input"><input type="text" placeholder="Correo Electrónico"></div>
-            <div class="form_input"><input type="text" placeholder="Contraseña"></div>
-        </fieldset>
-        
-    </form>
-    <details>
-    <summary>Términos y Condiciones</summary>
-    <div class="contM">
-    <h3>Selección Particular</h3>
-    <a href="#1">1</a>
-    <a href="#2">2</a>
-    <a href="#3">3</a>
-    <a href="#4">4</a>
-    <a href="#5">5</a>
-    <a href="#6">6</a>
-    <a href="#7">7</a>
-    <a href="#8">8</a>
-    <a href="#9">9</a>
-    </div>
+<body id="body">
+<div class="centrarTYC">
+    <h1><b>Términos y Condiciones</b></h1>
     <ol>
         <li id="1"><b>Aceptación de los Términos</b><br><br>
             Al acceder y utilizar este sitio web, aceptas cumplir y estar sujeto a los siguientes términos y condiciones. Si no estás de acuerdo con estos términos, por favor, no utilices este sitio web.</li>
@@ -59,7 +37,6 @@
                 Contenido Generado por el Usuario: Si permites a los usuarios publicar comentarios o contenido, establece reglas claras sobre el contenido aceptable y tus derechos para moderar o eliminar contenido.
                 Propiedad Intelectual: Si tu sitio web incluye contenido protegido por derechos de autor, como imágenes o videos, asegúrate de tener los permisos necesarios.</li>
     </ol>
-    </details>
-    <a href="../enlaces/terminoscondiciones.html" download>Descargar Términos y Condiciones</a>
+</div>
 </body>
 </html>
