--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <p class="IAH">Por aquí estarán mis prácticas de la parte avanzada de CSS y HTML del curso de SoyDalto por YouTube<br><br>Ya he subido otro repositorio a mi GitHub con lo básico como esto de los textos, títulos, párrafos, fondos, gradientes, sombras</p>
     <p class="IAH2">Por aquí estarán mis prácticas de la parte avanzada de CSS y HTML del curso de SoyDalto por YouTube<br><br>Ya he subido otro repositorio a mi GitHub con lo básico como esto de los textos, títulos, párrafos, fondos, gradientes, sombras</p>
     <div class="bloque">
-        <a href="enlaces/e1.html" title="Enlace 1" class="bot1">Formulario</a>
+        <a href="enlaces/e1.html" title="Enlace 1" class="bot1" rel="noopener noreferrer nofollow">Formulario</a>
     </div>
     <div class="bloque2">
-        <a href="enlaces/e2.html" title="Enlace 2" class="bot2">Data-Summary</a>
+        <a href="enlaces/e2.html" title="Enlace 2" class="bot2" rel="noopener noreferrer nofollow">DSEF</a>
     </div>
 
 </body>
