--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <div class="bloque2">
         <a href="enlaces/e2.html" title="Enlace 2" class="bot2" rel="noopener noreferrer nofollow">DSEF</a>
     </div>
-
+    <div class="bloque2">
+        <a href="enlaces/e3.html" title="Enlace 3" class="bot3" rel="noopener noreferrer nofollow">Tablas</a>
+    </div>
 </body>
 </html>
