--- a/enlaces/e3.html
+++ b/enlaces/e3.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tablas</title>
-    <rel 
+    <link rel="stylesheet" href="tabla.css">
 </head>
 <body>
-    
+    <a href="../index.html">Principal</a>
+    <table>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>7</td>
+            <td>8</td>
+            <td>9</td>
+            <td>0</td>
+        </tr>
+    </table>
 </body>
 </html>
