--- a/enlaces/e3.html
+++ b/enlaces/e3.html
@@ -10,18 +10,25 @@
     <a href="../index.html">Principal</a>
     <table>
         <tr>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>5</td>
+            <th>Nombre</th>
+            <th>Apellido</th>    
+            <th>Edad</th>
+            <th>País</th>
+            <th>Sueldo</th>
         </tr>
         <tr>
-            <td>6</td>
-            <td>7</td>
-            <td>8</td>
-            <td>9</td>
-            <td>0</td>
+            <td>Alejandro</td>
+            <td>Fajardo</td>
+            <td>20</td>
+            <td>Venezuela</td>
+            <td>500$</td>
+        </tr>
+        <tr>
+            <td>Luis</td>
+            <td>Martínez</td>
+            <td>18</td>
+            <td>Colombia</td>
+            <td>200$</td>
         </tr>
     </table>
 </body>
