--- a/enlaces/e3.html
+++ b/enlaces/e3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <a href="../index.html">Principal</a>
-    <table>
+    <table cellspacing="0">
         <tr>
             <th>Nombre</th>
             <th>Apellido</th>    
