--- a/enlaces/e3.html
+++ b/enlaces/e3.html
@@ -31,5 +31,7 @@
             <td>200$</td>
         </tr>
     </table>
+    <video src="../Gato.mp4" controls muted></video>
+    <audio src="../Cosmic Looper.mp3" controls muted></audio>
 </body>
 </html>
