--- a/enlaces/e3.html
+++ b/enlaces/e3.html
@@ -31,7 +31,7 @@
             <td>200$</td>
         </tr>
     </table>
-    <video src="../Gato.mp4" controls muted></video>
-    <audio src="../Cosmic Looper.mp3" controls muted></audio>
+    <video src="../Gato.mp4" controls muted>Vídeo no disponible</video>
+    <audio src="../Cosmic Looper.mp3" controls muted>Audio no disponible</audio>
 </body>
 </html>
