--- a/enlaces/e3.html
+++ b/enlaces/e3.html
@@ -17,23 +17,23 @@
             <th>Sueldo</th>
         </tr>
         <tr>
-            <td>Alejandro</td>
-            <td>Fajardo</td>
-            <td>20</td>
+            <td>Juan</td>
+            <td>Paredes</td>
+            <td>50</td>
             <td>Venezuela</td>
-            <td>500$</td>
+            <td>1000$</td>
         </tr>
         <tr>
             <td>Luis</td>
-            <td>Martínez</td>
-            <td>18</td>
+            <td>Contreras</td>
+            <td>37</td>
             <td>Colombia</td>
-            <td>200$</td>
+            <td>800$</td>
         </tr>
     </table>
     <div class="vidcent"><video src="../Gato.mp4" controls autoplay muted>Vídeo no disponible</video></div>
     <audio src="../Cosmic Looper.mp3" controls muted>Audio no disponible</audio>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae excepturi doloribus blanditiis libero provident. Ipsam tempore sequi molestiae voluptate deleniti repellendus laborum aspernatur beatae corporis, deserunt aut debitis iusto quam.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae excepturi doloribus blanditiis libero provident. Ipsam tempore sequi molestiae voluptate deleniti repellendus laborum aspernatur beatae corporis, deserunt aut debitis iusto quam.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae excepturi doloribus blanditiis libero provident. Ipsam tempore sequi molestiae voluptate deleniti repellendus laborum aspernatur beatae corporis, deserunt aut debitis iusto quam.</p>
-    <div class="vidcent"><img src="../Kirby.gif" class="k"></div>
+    <div class="vidcent"><img loadin="lazy"src="../Kirby.gif" class="k"></div>
 </body>
 </html>
