--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
     <div class="bloque2">
         <a href="enlaces/e3.html" title="Enlace 3" class="bot3" rel="noopener noreferrer nofollow">Tablas</a>
     </div>
+    <div class="bloque2">
+        <a href="enlaces/cssInt.html" title="CSS" class="bot4" rel="noopener noreferrer nofollow">Selector</a>
+    </div>
 </body>
 </html>
