--- a/enlaces/cssInt.html
+++ b/enlaces/cssInt.html
@@ -19,6 +19,13 @@
         <li>Hola</li>
     </ul>
     <li>Adiós</li>
+    <div id="azul">
+    <h3 id="T3">Título 3</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla ex vitae delectus, explicabo laudantium perspiciatis eveniet quibusdam culpa! Quod, ullam? Amet deleniti consectetur fugiat placeat modi beatae doloribus vel? Natus.</p>
+</div>
+<h4 style="color:red">Título 4</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, illum magni et porro reprehenderit quod mollitia fugit cupiditate, labore rerum repellat voluptatum ipsum aut in eaque! Molestias commodi tempora aperiam.</p>
     <a href="../index.html">Principal</a>
+    
 </body>
 </html>
