--- a/enlaces/cssInt.html
+++ b/enlaces/cssInt.html
@@ -25,6 +25,19 @@
 </div>
 <h4 style="color:red">Título 4</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, illum magni et porro reprehenderit quod mollitia fugit cupiditate, labore rerum repellat voluptatum ipsum aut in eaque! Molestias commodi tempora aperiam.</p>
+    <ol>
+        <li class="not">A</li>
+        <li class="not">B</li>
+        <li class="not">C</li>
+        <li>D</li>
+        <li>E</li>
+        <li>F</li>
+        <li class="not">G</li>
+        <li>H</li>
+        <li class="not">I</li>
+        <li>J</li>
+    </ol>
+    <input type="checkbox";
     <a href="../index.html">Principal</a>
     
 </body>
