--- a/enlaces/cssInt.html
+++ b/enlaces/cssInt.html
@@ -37,7 +37,9 @@
         <li class="not">I</li>
         <li>J</li>
     </ol>
-    <input type="checkbox";
+    <input type="checkbox">
+    <input class="email" type="email">
+    <label>Contraseña</label><input class="in2" type="email">
     <a href="../index.html">Principal</a>
     
 </body>
