--- a/enlaces/cssInt.html
+++ b/enlaces/cssInt.html
@@ -39,7 +39,7 @@
     </ol>
     <input type="checkbox">
     <input class="email" type="email">
-    <label>Contraseña</label><input class="in2" type="email">
+    <label>Contraseña</label><input class="in2" type="email" placeholder="Correo">
     <a href="../index.html">Principal</a>
     
 </body>
